<resources>
    <string name="app_name">Pocket Money</string>
    <string name="msg_splash_subtitle">India\'s Payments and Shopping App</string>
    <string name="jmm_infotech">JMM Infotech</string>
    <string name="from">From</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="all_services">All Services</string>
    <string name="shop">Shop</string>
    <string name="history">History</string>
    <string name="offers">Offers</string>
    <string name="balance">Balance</string>
    <string name="view_details">View Details</string>
    <string name="balanced">Balance:</string>
    <string name="_0">0</string>
    <string name="see_all_services">See all services</string>
    <string name="dummy_text_1"><![CDATA[Recharge & Get 5% cashback]]></string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500</string>
    <string name="recharge_pay_bills"><![CDATA[Recharge & Pay Bills]]></string>
    <string name="coming_soon">Coming Soon</string>
    <string name="get_started">Get Started</string>
    <string name="help">Help</string>
    <string name="all_transactions">All Transactions</string>
    <string name="all">All</string>
    <string name="msg_no_transaction_history">You don\'t have any transaction history.</string>
    <string name="redeem_supercash">Redeem Supercash</string>
    <string name="earn_supercash">Earn Supercash</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="msg_search">Search for Products,Brands and More</string>
    <string name="all_categories">All Categories</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="choose_language">Choose Language</string>
    <string name="my_orders">My Orders</string>
    <string name="my_coupons">My Coupons</string>
    <string name="my_cart">My cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_notifications">My Notifications</string>
    <string name="my_account">My Account</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="help_centre">Help Centre</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="scan_pay"><![CDATA[Scan & Pay]]></string>
    <string name="msg_enter_name_n_mobile_no">Please Enter Name or Mobile No.</string>
    <string name="electricity_boards">Electricity Boards</string>
    <string name="dth_operators">DTH Operators</string>
    <string name="operators">Operators</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="recharge_for">Recharge for</string>
    <string name="see_plans">See Plans</string>
    <string name="enter_amount_or_search_contact">Enter amount or search contact</string>
    <string name="change_plan">Change Plan</string>
    <string name="pay">Pay</string>
    <string name="select_operator">Select Operator</string>
    <string name="amount">Amount</string>
    <string name="select_state">Select State</string>
    <string name="proceed">Proceed</string>
    <string name="consumer_details">Consumer Details</string>
    <string name="select_board">Select Board</string>
    <string name="customer_account_number">Customer Account Number</string>
    <string name="title">Title</string>
    <string name="your_cart">Your Cart</string>
    <string name="checkout">Checkout</string>
    <string name="rupee_zero">₹0</string>
    <string name="msg_emi">EMI starts from ₹100</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="address">Address</string>
    <string name="dummy_address">Shop 16, Bhoomi Enclave, Mahavir Nagar, Above Sarawat Bank, Kandivali (west) Mumbai, Maharashtra, 400067</string>
    <string name="dummy_mobile_number">9897154545</string>
    <string name="dummy_user_name">Joe Mark</string>
    <string name="edit">Edit</string>
    <string name="dummy_payment_card_num">**** **** **** 1234</string>
    <string name="full_name">Full Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="country">Country</string>
    <string name="save_address">Save Address</string>
    <string name="add_address">Add Address</string>
    <string name="adding_new_address">Adding New Address</string>
    <string name="add_new_card">Add New Card</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="use_this_for_shipping_address">Use this for shipping address</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="saved_payment_methods">Saved Payment Methods</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="india">India</string>
    <string name="select_city">Select city</string>
    <string name="_default">Default</string>
    <string name="filters">Filters</string>
    <string name="txt_new">New</string>
    <string name="featured">Featured</string>
    <string name="saving">Saving</string>
    <string name="str_continue">Continue</string>
    <string name="your_order_will_be_delivered_soon">Your order will be delivered soon.</string>
    <string name="thank_you_for_choosing_our_app">Thank you for choosing our app!</string>
    <string name="ordered_successfully">Ordered Successfully !</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="sort_by">Sort by</string>
    <string name="details">Details</string>
    <string name="privacy_policy_content">
        Privacy Policy

    </string>
    <string name="policy_title_1">1. Collection of Your Information</string>
    <string name="policy_title_2">2. Use of Demographic / Profile Data / Your Information</string>
    <string name="policy_title_3">3. Sharing of personal information</string>
    <string name="policy_title_4">4. Links to Other Sites</string>
    <string name="policy_title_5">5. Security Precautions</string>
    <string name="policy_title_6">6. Advertisements on Platform</string>
    <string name="policy_title_7">7. Children Information</string>
    <string name="policy_title_8">8. Data Retention</string>
    <string name="policy_title_9">9. Your Consent</string>
    <string name="policy_title_10">10. Changes to this Privacy Policy</string>
    <string name="policy_title_11">11. Queries</string>
</resources>