<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/app_menus">

        <item
            android:id="@+id/all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/ic_grid"/>

<!--        <item-->
<!--            android:id="@+id/offer_zone"-->
<!--            android:title="@string/offer_zone"-->
<!--            android:icon="@drawable/ic_offer"/>-->

        <item
            android:id="@+id/choose_language"
            android:title="@string/choose_language"
            android:icon="@drawable/ic_baseline_language_24"/>

    </group>


    <group android:id="@+id/user_menu">

        <item
            android:id="@+id/my_orders"
            android:title="@string/my_orders"
            android:icon="@drawable/ic_baseline_local_offer_24"/>

<!--        <item-->
<!--            android:id="@+id/my_coupons"-->
<!--            android:title="@string/my_coupons"-->
<!--            android:icon="@drawable/ic_offer"/>-->

        <item
            android:id="@+id/my_cart"
            android:title="@string/my_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:iconTint="@color/black"
            />

<!--        <item-->
<!--            android:id="@+id/my_wishlist"-->
<!--            android:title="@string/my_wishlist"-->
<!--            android:icon="@drawable/ic_round_favorite_24"/>-->

        <item
            android:id="@+id/my_notifications"
            android:title="@string/my_notifications"
            android:icon="@drawable/ic_notifications"
            android:iconTint="@color/black"/>

        <item
            android:id="@+id/my_addresses"
            android:title="My Addresses"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"/>

        <!--        <item-->
<!--            android:id="@+id/my_account"-->
<!--            android:title="@string/my_account"-->
<!--            android:icon="@drawable/ic_person"-->
<!--            />-->

    </group>

    <group android:id="@+id/user_settings">

<!--        <item-->
<!--            android:id="@+id/notification_preferences"-->
<!--            android:title="@string/notification_preferences" />-->

        <item
            android:id="@+id/help_centre"
            android:title="@string/help_centre" />

        <item
            android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy" />

    </group>

</menu>