<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

<!--    <item-->
<!--        android:id="@+id/allServices"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_grid"-->
<!--        android:title="@string/all_services" />-->

    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/shop"/>

    <item
        android:id="@+id/paymentHistory"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />
<!--    <item-->
<!--        android:id="@+id/offers"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_offer"-->
<!--        android:title="@string/offers"/>-->

<!--    <item-->
<!--        android:id="@+id/offers"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_offer"-->
<!--        android:title="@string/offers"/>-->


    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title= "Account"/>
</menu>